# bazel-module-issue

./: MODULE.bazel  README.md  maven_deps.MODULE.bazel  renovate.json
