maven = use_extension("@rules_jvm_external//:extensions.bzl", "maven")
maven.install(
    name = "maven",
    artifacts = [
        "com.google.protobuf:protobuf-java:3.21.8",
    ],
    fetch_sources = True,
    lock_file = "//:maven_install.json",
    fail_if_repin_required = True,
    version_conflict_policy = "pinned",
)

use_repo(maven, "maven")
